Fixed memory leak in Windows Vista style widgets

The animations are now deleted in destruction of the Vista style.
With the previous implementation the animations were not deleted for
instance if you move mouse cursor off from a widget with hover
animation (like QPushButton).

Task-number: QTBUG-21532

Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>